--- a/src/visualizer/Visualizer.css
+++ b/src/visualizer/Visualizer.css
@@ -1,9 +1,8 @@
 .array-container{
     display: flex;
     justify-content: center;
-    align-items: center;
-    height: 100%;
-    padding: 20%;
+    align-items: end;
+    min-height: 500px;
 }
 
 .array-bar{
